src/assets/_search.scss
@import "./variables";

.search-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 20px;
  background: #0000002a;
  padding: 10px;
  border-radius: 15px;
  text-align: center;
}

.search-input {
  padding: 10px;
  border: none;
  border-radius: 15px;
  width: 100%;
  margin-bottom: 10px;

  &:focus {
    outline: none;
  }
}

// .search-input:focus + .search-results {
//   display: block;
// }

.search-results {
  //display: none;
  width: 100%;
  position: relative;
  margin-top: 10px;
  min-height: 50px;
  z-index: 10;
}

.search-result-list {
  position: absolute;
  width: 100%;
  background: #000000bf;
  border-radius: 15px;
  display: flex;
  flex-direction: column;
  align-items: center;
  li {
    margin: 5px 0;
    list-style-type: none;
    width: max-content;
    max-width: calc(100% - 50px);
    cursor: pointer;
    p {
      padding: 10px;
      border-radius: 15px;
      color: $white-color;
      &:hover {
        background: $white-color;
        color: $orange-color;
      }
    }

  }
}

